php pagine noleggio e acquista

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 .DS_Store
 Analisi/.DS_Store
 Analisi/bozze grafiche/.DS_Store
+PAGES/.DS_Store
+PHP/.DS_Store
+JS/.DS_Store
+Images/.DS_Store
+HTML/.DS_Store
 
