--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ HTML/.DS_Store
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
+Relazione/*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
